[package]
name = "zkinterface-zexe"
version = "0.1.0"
authors = ["Aurélien Nicolas <aurel@qed-it.com>", "Pratyush Mishra <pratyush@berkeley.edu>"]
edition = "2018"

[lib]
name = "zkinterface_bellman"
path = "src/lib.rs"

[[bin]]
name = "gm17_prover"
path = "src/bin.rs"

[dependencies]
num-bigint = "0.2.2"
algebra = { git = "https://github.com/scipr-lab/zexe" }
r1cs-core = { git = "https://github.com/scipr-lab/zexe" } # "0.14.2"
r1cs-std = { git = "https://github.com/scipr-lab/zexe" } # "0.14.2"
rand = "0.7"
zkinterface = "1.0.6"

[dev-dependencies]
blake2-rfc = { git = "https://github.com/gtank/blake2-rfc", rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9" }
byteorder = "1"
